Fix styling on mobile

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -367,8 +367,11 @@ button:focus {
 	  height: 100vh;
 	  min-height: 41.5rem;
 	  display: flex;
-	  align-items: center;
+	  align-items: flex-start;
 	  justify-content: center;
+	  @include breakpoint(sm) {
+	  	align-items: center;
+	 	}
 	  .container {
 	  	display: flex;
 	  	flex-direction: column;
@@ -451,7 +454,7 @@ button:focus {
 	  height: auto;
 	  min-height: 41.5rem;
 	  display: flex;
-	  align-items: center;
+	  align-items: flex-start;
 	  justify-content: center;
 		.container {
 			max-width: 90rem;
@@ -475,6 +478,7 @@ button:focus {
 		}
 		@include breakpoint(sm) {
 			height: 100vh;
+			align-items: center;
 			.container {
 		 		flex-direction: row;
 			}
@@ -544,19 +548,20 @@ button:focus {
 		margin: 0 auto;
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
+		justify-content: flex-start;
 	}
 	.card-container {
 		padding: 0 1rem;
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		margin-top: 3.5rem;
 		& + * {
 			margin-top: 2rem;
 		}
 	}
 	.card {
-		max-width: 22.5rem;
+		max-width: 18rem;
 		padding: 1rem 0;
     text-align: center;
     border-radius: 1.5rem;
@@ -583,6 +588,7 @@ button:focus {
 			background-repeat: no-repeat;
 			background-position: center;
 			background-size: 100% auto;
+			margin-top: 0;
 			& + * {
 				margin-top: 0;
 			}
